Added Top 10 Ideas

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                          <ul>
                               <li>Quick Links:</li>
                               <li><a href="investing/portfolio.html">My Portfolio</a></li>
+                              <li><a href="investing/topten.html">Top 10 Ideas</a></li>
                               <li><a href="companies/companies.html">Company Profiles</a></li>
                               <li><a href="investing/investing.html">Learn about Investing</a></li>
                               <li><a href="learning/science.html">Learn about the Science</a></li>
@@ -137,7 +138,10 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="news-title">Website Updates</h2>
-
+                              <p> 
+                                   <strong>3/3/2023: </strong> Added a new <a href="investing/topten.html">Top 10 Ideas</a> list. Feel free to check it out using the Quicklink
+                                   on the homepage at the top.
+                              </p>
                               <p> 
                                    <strong>3/3/2023: </strong> Added some new styling to the Companies Page. I added the last updated date to the 
                                    main page for quick reference.
@@ -167,15 +171,7 @@
                                    <strong>3/1/2023: </strong>I added a <a href="investing/article.html">Persepectives Page</a> where I plan to occasionally post articles about 
                                    investing in biotech. 
                               </p>
-                              <p> 
-                                   <strong>3/1/2023: </strong> I update the profile for <a href="companies/pacbio.html">PACB</a>
-                                   after doing the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>3/1/2023: </strong> I update the profile for <a href="companies/fate.html">FATE</a>
-                                   after doing the 10K. 
-                              </p>
-                         
+                              
                          </div>
                     </section>
                </div>
