New Styling Update

--- a/clinicaldata/learnclincaldata.html
+++ b/clinicaldata/learnclincaldata.html
@@ -109,7 +109,7 @@
                               </ul>
                     
                     <section>
-                         <h2 class="section-title" id="phases">Phases of Clinical Trials</h2>
+                         <h2 class="sub-header" id="phases">Phases of Clinical Trials</h2>
                          <p>     
                               First will be years of preclinical work. This is all about the chemistry, formulation, toxicology and 
                               manufacturing of the drug. They will have to do extensive testing and submit all that data to the FDA 
@@ -182,7 +182,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="values">p values and HR values</h2>
+                         <h2 class="sub-header" id="values">p values and HR values</h2>
                          <p>     
                               The p value is a measure of statistical probability. We use this in clinical trials to determine if the 
                               data we are seeing is from the trial we designed or if it could have happened by random chance. This is 
@@ -225,7 +225,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="recist">RECIST Response Rates</h2>
+                         <h2 class="sub-header" id="recist">RECIST Response Rates</h2>
                          <p>     
                               When we deal with solid tumors, we use the Response Evaluation Criteria In Solid Tumors (RECIST 1.1) 
                               standard to evaluate responses. The data shows that 90% of tumors are solid tumors and 10% are liquid 
