--- a/companies/companies.html
+++ b/companies/companies.html
@@ -86,19 +86,19 @@
                          <h2>TechBio</h2>
                          <ul>
                               <li>
-                                   2/24/23 <a href="relay.html">Relay Therapeutics (RLAY)</a>
+                                   <a href="relay.html">Relay Therapeutics (RLAY)</a>
                               </li>
                               <li>
-                                   2/28/23 <a href="recursion.html">Recursion Pharma (RXRX)</a>
+                                   <a href="recursion.html">Recursion Pharma (RXRX)</a>
                               </li>
                               <li>
-                                   1/13/23 <a href="exscientia.html">Exsientia (EXAI)</a>
+                                   <a href="exscientia.html">Exsientia (EXAI)</a>
                               </li>
                               <li>
-                                   2/21/23 <a href="abcellera.html">AbCellera (ABCL)</a>
+                                   <a href="abcellera.html">AbCellera (ABCL)</a>
                               </li>
                               <li>
-                                   3/1/23 <a href="schrodinger.html">Schrodinger (SDGR)</a>
+                                   <a href="schrodinger.html">Schrodinger (SDGR)</a>
                               </li>
                          </ul>
                     </div>
@@ -107,19 +107,19 @@
                          <h2>CRISPR</h2>
                          <ul>
                               <li>
-                                   2/28/23 <a href="beam.html">Beam Therapeutics (BEAM)</a> 
+                                   <a href="beam.html">Beam Therapeutics (BEAM)</a> 
                               </li>
                               <li>
-                                   2/24/23 <a href="intellia.html">Intellia Therapeutics (NTLA)</a>
+                                   <a href="intellia.html">Intellia Therapeutics (NTLA)</a>
                               </li>
                               <li>
-                                   2/21/23 <a href="crispr.html">CRISPR Therapeutics (CRSP)</a>
+                                   <a href="crispr.html">CRISPR Therapeutics (CRSP)</a>
                               </li>
                               <li>
-                                   3/2/23 <a href="verve.html">Verve Therapeutics (VERV)</a>
+                                   <a href="verve.html">Verve Therapeutics (VERV)</a>
                               </li>
                               <li>
-                                   1/13/23 <a href="prime.html">Prime Medicines (PRME)</a>
+                                   <a href="prime.html">Prime Medicines (PRME)</a>
                               </li>
                          </ul>
                     </div>
@@ -128,10 +128,10 @@
                          <h2>SynBio</h2>
                          <ul>
                               <li>
-                                   3/1/23 <a href="ginkgo.html">Gingko Bioworks (DNA)</a>
+                                   <a href="ginkgo.html">Gingko Bioworks (DNA)</a>
                               </li>
                               <li>
-                                   2/13/23 <a href="twist.html">Twist Bioscience (TWST)</a>
+                                   <a href="twist.html">Twist Bioscience (TWST)</a>
                               </li>
                          </ul>
                     </div>
@@ -140,16 +140,16 @@
                          <h2>iPSC</h2>
                          <ul>
                               <li>
-                                   1/13/23 <a href="ipsc.html">Century Therapeutics (IPSC)</a>
+                                   <a href="ipsc.html">Century Therapeutics (IPSC)</a>
                               </li>
                               <li>
-                                   1/12/23 <a href="sana.html">Sana Biotechnology (SANA)</a>
+                                   <a href="sana.html">Sana Biotechnology (SANA)</a>
                               </li>
                               <li>
-                                   3/1/23 <a href="fate.html">Fate Therapeutics (FATE)</a>
+                                   <a href="fate.html">Fate Therapeutics (FATE)</a>
                               </li>
                               <li>
-                                   1/14/23 <a href="caribou.html">Caribou Biosciences (CRBU)</a>
+                                   <a href="caribou.html">Caribou Biosciences (CRBU)</a>
                               </li>
                          </ul>
                     </div>
@@ -158,13 +158,13 @@
                          <h2>Sequencing</h2>
                          <ul>
                               <li>
-                                   2/23/23 <a href="invitae.html">Invitae (NVTA)</a>
+                                   <a href="invitae.html">Invitae (NVTA)</a>
                               </li>
                               <li>
-                                   3/1/23 <a href="pacbio.html">PacBio (PACB)</a>
+                                   <a href="pacbio.html">PacBio (PACB)</a>
                               </li>
                               <li>
-                                   1/31/23 <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
+                                   <a href="oxford.html">Oxford Nanopore (ONTTF)</a>
                               </li>
                          </ul>
                     </div>
@@ -173,13 +173,13 @@
                          <h2>Kinase Inhibitors</h2>
                          <ul>
                               <li>
-                                   2/23/23 <a href="blueprint.html">Blueprint Medicines (BPMC)</a>
+                                   <a href="blueprint.html">Blueprint Medicines (BPMC)</a>
                               </li>
                               <li>
-                                   2/28/23 <a href="mirati.html">Mirati Therapeutics (MRTX)</a>
+                                   <a href="mirati.html">Mirati Therapeutics (MRTX)</a>
                               </li>
                               <li>
-                                   2/27/23 <a href="revolution.html">Revolution Medicines (RVMD)</a>
+                                   <a href="revolution.html">Revolution Medicines (RVMD)</a>
                               </li>
                          </ul>
                     </div>
@@ -188,10 +188,10 @@
                          <h2>Protein Degraders</h2>
                          <ul>
                               <li>
-                                   2/23/23 <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
+                                   <a href="kymera.html">Kymera Therapeutics (KYMR)</a>
                               </li>
                               <li>
-                                   1/15/23 <a href="monterosa.html">MonteRosa Therapeutics (GLUE)</a>
+                                   <a href="monterosa.html">MonteRosa Therapeutics (GLUE)</a>
                               </li>
                          </ul>
                     </div>
