--- a/investing/article.html
+++ b/investing/article.html
@@ -82,7 +82,7 @@
                <div class="investing-container">
 
                     <section>
-                         <h2 class="investing-headers">
+                         <h2 class="section-title">
                               Perspectives in Biotech Investing
                          </h2>
                     </section>
@@ -94,7 +94,7 @@
                     </ul>
 
                     <article class="container">
-                         <h2 class="section-title" id="tomorrow">You Can Have The Future of Tomorrow Today</h2>
+                         <h2 class="sub-header" id="tomorrow">You Can Own The Future of Tomorrow Today</h2>
                          <p>March 1, 2023</p>
                          <p>
                               I have heard many people try to call this crash in biotech the end of the Biotechnology sector. 
