--- a/investing/planning.html
+++ b/investing/planning.html
@@ -81,7 +81,7 @@
 
                <div class="investing-container">
 
-                    <h2 class="investing-headers">Personal Finance</h2>
+                    <h2 class="section-title">Personal Finance</h2>
 
                     <section>
                          <p> 
@@ -117,7 +117,7 @@
                     </ul>
 
                     <section>
-                         <h2 class="investing-headers" id="bugeting">Budgeting</h2>
+                         <h2 class="section-title" id="bugeting">Budgeting</h2>
                          <p> 
                               When it comes to financial planning, the budget is the heart of the whole process. This is about 
                               knowing what you own and what you owe. It's about all the money you have coming in and all the money 
@@ -218,7 +218,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="emergency">Emergency Fund</h2>
+                         <h2 class="section-title" id="emergency">Emergency Fund</h2>
                          <p> 
                               The emergency fund is the most important thing you can ever do to improve your financial security and 
                               piece of mind. This is a shock absorber for your financial life. Too many people get into budgeting and 
@@ -246,7 +246,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="goals">Setting Goals</h2>
+                         <h2 class="section-title" id="goals">Setting Goals</h2>
                          <p> 
                               Setting goals financially is about figuring out what you want over the long term and building a 
                               plan to reach those goals. The first major goal all people should have is retirement. Buying a 
@@ -295,7 +295,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="savings">Savings and Investing</h2>
+                         <h2 class="section-title" id="savings">Savings and Investing</h2>
                          <p> 
                               What is the difference between savings and investing?  Savings is designed for short term money that 
                               needs to stay liquid or ready to be used. Your emergency fund should always be savings as you could 
@@ -352,7 +352,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="managedebt">Managing Debt</h2>
+                         <h2 class="section-title" id="managedebt">Managing Debt</h2>
                          <p>
                               What is the difference between Credit and Debt? Credit is the amount of money you are able to borrow based 
                               on your ability to repay the money you borrow. This is often calculated based on your Credit Score. The higher 
@@ -471,7 +471,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="insurance">Insurance</h2>
+                         <h2 class="section-title" id="insurance">Insurance</h2>
                          <p> 
                               Risk management in personal finance is about protecting yourself if something goes wrong. This comes in 
                               the form of insurance. There are some obvious places in life where insurance is important, but there 
@@ -497,7 +497,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="retirement">Retirement Planning</h2>
+                         <h2 class="section-title" id="retirement">Retirement Planning</h2>
                          <p> 
                               Retirement planning comes down to two factors. The first is figuring out how much you need to retire 
                               and maintain your current lifestyle or any lifestyle you wish to achieve in retirement. As long as it's 
