--- a/investing/portfoliobuilding.html
+++ b/investing/portfoliobuilding.html
@@ -82,7 +82,7 @@
                <div class="investing-container">
 
                     <section>
-                         <h2 class="investing-headers">Saving and Investing</h2>
+                         <h2 class="section-title">Saving and Investing</h2>
                          <p> 
                               Investing is the best way a person has to build their money over the long term. When you look at cash 
                               accounts like Savings, Money Markets and Certificates of Deposit, they pay less than 1% interest on 
@@ -126,7 +126,7 @@
                     </ul>
 
                     <section>
-                         <h2 class="investing-headers" id="allocation">Asset Allocation</h2>
+                         <h2 class="section-title" id="allocation">Asset Allocation</h2>
                          <p> 
 
                               Asset allocation is about picking the right types of investment to achieve your investment goals. 
@@ -311,7 +311,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="building">Portfolio Building</h2>
+                         <h2 class="section-title" id="building">Portfolio Building</h2>
                          <p> 
                               Now we are going to start to look at strategies to build a portfolio of investments. This will be 
                               about picking individual stocks, bonds, REITs or commodity indexes to reach our investment goals. 
@@ -509,7 +509,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="doingdd">Due Diligence</h2>
+                         <h2 class="section-title" id="doingdd">Due Diligence</h2>
                          <p> 
                               Now I am going to share with you how I do my due diligence for companies. This is just my method. I 
                               am sure everyone else has their own. I tend to spend a lot of time getting to know a company very 
@@ -624,7 +624,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="fundamentals">Fundamental Analysis</h2>
+                         <h2 class="section-title" id="fundamentals">Fundamental Analysis</h2>
                          <p> 
                               Here I am going to share with you the top things I look for in any company I invest in. There are a 
                               lot of things that go into building a great company, but I tend to focus on fundamentals and 
@@ -798,7 +798,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="valuation">Valuation</h2>
+                         <h2 class="section-title" id="valuation">Valuation</h2>
                          <p> 
                               I have been valuing companies for about 27 years now. I was fascinated as a new investor on what 
                               made companies worth what they were worth. My first exploration into valuation was the classic 
@@ -914,7 +914,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="risks">Risk Management</h2>
+                         <h2 class="section-title" id="risks">Risk Management</h2>
                          <p> 
                               Risk is the possibility of losing money in an investment. We can manage risk in our investments once 
                               we understand what it is and what kinds of risk there is around investing. Often just understanding 
@@ -1050,7 +1050,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="management">Portfolio Management</h2>
+                         <h2 class="section-title" id="management">Portfolio Management</h2>
                          <p> 
                               When it comes to long term investing and planning, it is important to keep up with your portfolio 
                               periodically. If you are doing passive investing, you might just look at your investments annually 
@@ -1224,7 +1224,7 @@
                     </section>
 
                     <section>
-                         <h2 class="investing-headers" id="speculation">Speculate Wisely</h2>
+                         <h2 class="section-title" id="speculation">Speculate Wisely</h2>
                          <p> 
                               Speculation is about investing in companies with high risk levels because they have very big 
                               potential. It can be an early stage technology company building electric cars or it could be an 
