--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -124,7 +124,7 @@
                               </ul>
 
                     <section>
-                         <h2 class="section-title" id="rly4008">RLY-4008 Phase 1 Data</h2>
+                         <h2 class="sub-header" id="rly4008">RLY-4008 Phase 1 Data</h2>
                          <p>Link to the original data pdf so you can follow along 
                               <a href="https://ir.relaytx.com/node/8161/pdf" target="_blank">RLY-4008 Phase 1 Data</a>
                          </p>
@@ -180,7 +180,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="ntla2001">NTLA-2001 Phase 1 Data</h2>
+                         <h2 class="sub-header" id="ntla2001">NTLA-2001 Phase 1 Data</h2>
                          <p>Link to the original data pdf so you can follow along 
                               <a href="https://ir.intelliatx.com/node/10451/pdf" target="_blank">NTLA-2001 Phase 1 Data</a>
                          </p>
@@ -220,7 +220,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="ntla2002">NTLA-2002 Phase 1 Data</h2>
+                         <h2 class="sub-header" id="ntla2002">NTLA-2002 Phase 1 Data</h2>
                          <p>Link to the original data pdf so you can follow along 
                               <a href="https://ir.intelliatx.com/node/10551/pdf" target="_blank">NTLA-2002 Phase 1 Data</a>
                          </p>
@@ -262,7 +262,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="exacel">Exa-cel Phase 1/2 Data</h2>
+                         <h2 class="sub-header" id="exacel">Exa-cel Phase 1/2 Data</h2>
                          <p>Link to the original data word document so you can follow along 
                               <a href="http://ir.crisprtx.com/static-files/0bdd16b9-d12f-4f51-9fe1-4fd69e4d4851" target="_blank">Exa-cel Phase 1/2 Data</a>
                          </p>
@@ -319,7 +319,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="ctx110">CTX-110 Phase 1 Data</h2>
+                         <h2 class="sub-header" id="ctx110">CTX-110 Phase 1 Data</h2>
                          <p>Link to the original data word document so you can follow along 
                               <a href="http://ir.crisprtx.com/static-files/1521a18c-0864-4d66-9a7b-af07cf79d8a2" target="_blank">CTX-110 Phase 1 Data</a>
                          </p>
@@ -357,7 +357,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="cb010">CB-010 Phase 1 Data</h2>
+                         <h2 class="sub-header" id="cb010">CB-010 Phase 1 Data</h2>
                          <p>Link to the original data pdf so you can follow along 
                               <a href="https://investor.cariboubio.com/node/7461/pdf" target="_blank">CB-010 Phase 1 Data</a>
                          </p>
