Investing Section Update

--- a/investing/article.html
+++ b/investing/article.html
@@ -79,22 +79,22 @@
 
           <main>
 
-               <div class="investing-container">
+               <div class="container">
 
                     <section>
                          <h2 class="section-title">
-                              Perspectives in Biotech Investing
+                              Perspectives
                          </h2>
                     </section>
                     
-                    <ul class="investor-link">
+                    <ul class="container">
                          <li>
-                              <a href="#tomorrow">You Can Own the Future of Tomorrow Today</a>
+                              <a href="#tomorrow">Future of Tomorrow Today</a>
                          </li>
                     </ul>
 
                     <article class="container">
-                         <h2 class="sub-header" id="tomorrow">You Can Own The Future of Tomorrow Today</h2>
+                         <h2 class="sub-header" id="tomorrow">Future of Tomorrow Today</h2>
                          <p>March 1, 2023</p>
                          <p>
                               I have heard many people try to call this crash in biotech the end of the Biotechnology sector. 
@@ -152,7 +152,11 @@
                          </p>
                     </article>
 
-                    <p>&#42; I am not a Financial Advisor. This is just My Perspetive. Please refer to your financial advisor before making any investing decisions.</p>
+                    <div class="container">
+                         <a href="investing.html">Back to Investing</a>
+                    </div>
+
+                    <p class="container">&#42; I am not a Financial Advisor. This is just My Perspetive. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
           </main>
 
