--- a/investing/planning.html
+++ b/investing/planning.html
@@ -79,7 +79,7 @@
 
           <main>
 
-               <div class="investing-container">
+               <div class="container">
 
                     <h2 class="section-title">Personal Finance</h2>
 
@@ -97,7 +97,7 @@
                     
                     <ul  class="investor-link">
                          <li>
-                              <a href="#bugeting">Budgeting</a>
+                              <a href="#budgeting">Budgeting</a>
                          </li>
                          <li>
                               <a href="#emergency">Emergency Fund</a>
@@ -114,10 +114,13 @@
                          <li>
                               <a href="#insurance">Insurance</a>
                          </li>
+                         <li>
+                              <a href="#retirement">Retirement Planning</a>
+                         </li>
                     </ul>
 
                     <section>
-                         <h2 class="section-title" id="bugeting">Budgeting</h2>
+                         <h2 class="section-title" id="budgeting">Budgeting</h2>
                          <p> 
                               When it comes to financial planning, the budget is the heart of the whole process. This is about 
                               knowing what you own and what you owe. It's about all the money you have coming in and all the money 
@@ -532,6 +535,10 @@
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
+
+                    <div>
+                         <a href="investing.html">Back to Investing</a>
+                    </div>
 
                     <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
