--- a/investing/portfoliobuilding.html
+++ b/investing/portfoliobuilding.html
@@ -79,7 +79,7 @@
 
           <main>
 
-               <div class="investing-container">
+               <div class="container">
 
                     <section>
                          <h2 class="section-title">Saving and Investing</h2>
@@ -1268,6 +1268,10 @@
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
+
+                    <div>
+                         <a href="investing.html">Back to Investing</a>
+                    </div>
 
                     <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
