--- a/investing/topten.html
+++ b/investing/topten.html
@@ -175,6 +175,10 @@
                     indications they pick. This is still early in phase 1 so we need to see the data first. 
                </p>
           </section>
+
+          <div class="container">
+               <a href="investing.html">Back to Investing</a>
+          </div>
                
           </main>
 
