--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
                          <div>
                               <h2 class="news-title">Website Updates</h2>
                               <p> 
+                                   <strong>3/3/2023: </strong> I continue to build out the Investing Section by adding a new menu 
+                                   and new topics like a Perspective, Top 10 Ideas and Fintech section.
+                              </p>
+                              <p> 
                                    <strong>3/3/2023: </strong> Added a new <a href="investing/topten.html">Top 10 Ideas</a> list. Feel free to check it out using the Quicklink
                                    on the homepage at the top.
                               </p>
@@ -162,14 +166,6 @@
                               <p> 
                                    <strong>3/2/2023: </strong> I updated the profile for <a href="companies/verve.html">VERV</a>
                                    as far as I can without the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>3/1/2023: </strong> I updated the profile for <a href="companies/ginkgo.html">DNA</a>
-                                   as far as I can without the 10K. 
-                              </p>
-                              <p> 
-                                   <strong>3/1/2023: </strong>I added a <a href="investing/article.html">Persepectives Page</a> where I plan to occasionally post articles about 
-                                   investing in biotech. 
                               </p>
                               
                          </div>
