--- a/investing/investing.html
+++ b/investing/investing.html
@@ -13,7 +13,7 @@
           </script>
 
           <!-- Page Title -->
-          <title>Learn About Fiance and Investing</title>
+          <title>Learn About Finance and Investing</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
