--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     <div class="news-updates">
                          <ul>
                               <li>Perspectives:</li>
-                              <li><a href="investing/article.html#tomorrow">You Can Have the Future of Towmorrow Today</a></li>
+                              <li><a href="investing/article.html#tomorrow">Future of Tomorrow Today</a></li>
+                              <li><a href="investing/article.html#editing">Perspective on Gene Editing</a></li>
                          </ul>
                     </div>
                </div>
