--- a/investing/article.html
+++ b/investing/article.html
@@ -91,11 +91,61 @@
                          <li>
                               <a href="#tomorrow">Future of Tomorrow Today</a>
                          </li>
+                         <li>
+                              <a href="#editing">Perspective on Gene Editing</a>
+                         </li>
                     </ul>
 
                     <article class="container">
+                         <h2 class="sub-header" id="editing">Perspective on Gene Editing</h2>
+                         <p>March 5, 2023 by <a href="https://twitter.com/GeneInvesting" target="_blank">@GeneInvesting</a></p><p>
+                              Many ask me why I like gene editing, and more specifically, <a href="../companies/beam.html">BEAM</a> and
+                              <a href="../companies/intellia.html">NTLA</a> so much. First I'll answer this 
+                              question more broadly. I truly believe CRISPR and gene editing are the biggest discoveries in human 
+                              history. Simply looking at the fact a new “copycat” company pops up every other month tells you there 
+                              must be tremendous value in this space. 
+                         </p>
+                         <p>     
+                              Cathie Wood gets a lot of flak for pumping some questionable stocks- she is human and no one is right 
+                              100% of the time- but she had a good point a few years ago. We can put value on a new tech breakthrough 
+                              like the iPod or iPhone, but what is it worth to cure a blind child?
+                              Companies like <a href="../companies/crispr.html">CRSP</a>, NTLA, and BEAM are about to introduce themselves to the world as the curers of 
+                              serious diseases. Patient testimonials are already being published that speak to the life-changing gift 
+                              these medicines are providing. 
+                         </p>
+                         <p>
+                              But why am I oddly so comfortable being invested in such a risky space? Looking at NTLA, I believe it 
+                              has been largely de-risked at this point. Some patients in the 2001-PN trial were dosed over 2 years 
+                              ago. They've dosed over 50 with their 2 lead in-vivo medicines already.
+                              Taking a look at the CRSP success also should help ease some concerns, however ex-vivo is largely less 
+                              “dangerous.” CRSP has some patients who are still essentially cured after receiving their treatment 4 
+                              years ago.
+                         </p>
+                         <p>
+                              Also the nice thing about NTLA is the fact their 2 lead programs are nearly identical. The success and 
+                              safety of 1 largely can be used to bolster the probability of success of the other.
+                              I truly believe there are few stocks positioned as well for the next 4-5 years as they are. Add in the 
+                              fact their CEO appears to be firing on all cylinders- everything they do is incredibly quick. 
+                              So why BEAM? They appear the exact opposite so far- incredibly slow. Their tech is superior and they 
+                              have the largest toolbox out of all the companies. They even have access to certain parts of prime 
+                              editing. Base editing, when perfected, is better and safer than 1.0 CRISPR.
+                         </p>
+                         <p>
+                              BEAM can tackle many more diseases and I foresee bigger upside in the long run for this company. Their 
+                              ESCAPE technology is exciting and puts them in the lead to cure sickle cell disease on a worldwide 
+                              level.
+                              I for one, do not expect the biggest bull-run for this exciting technology to have already happened. If 
+                              you think it got out of hand before (which it totally did) just wait until we start parading cured 
+                              patients out on CNBC to talk to Jim Cramer and the Fast Money crew!
+                         </p>
+
+                         <p class="top-link"><a href="#top">Top</a></p>
+                        
+                    </article>
+
+                    <article class="container">
                          <h2 class="sub-header" id="tomorrow">Future of Tomorrow Today</h2>
-                         <p>March 1, 2023</p>
+                         <p>March 1, 2023 by <a href="https://twitter.com/Biotech2k1" target="_blank">@biotech2k1</a></p>
                          <p>
                               I have heard many people try to call this crash in biotech the end of the Biotechnology sector. 
                               A sector that has been around for decades. One of the most necessary sectors in the entire 
@@ -150,6 +200,8 @@
                               articles predicting the end of biotechnology, I have taken to the spreading of the Science Of The Future. 
                               I think scary sells a lot of articles, but vision will favor the patient investor.
                          </p>
+
+                         <p class="top-link"><a href="#top">Top</a></p>
                     </article>
 
                     <div class="container">
