--- a/investing/article.html
+++ b/investing/article.html
@@ -85,14 +85,18 @@
                          <h2 class="section-title">
                               Perspectives
                          </h2>
+
+                         <p class="container">&#42; Perspectives here are those of the individual contributor. They should not be 
+                              considered investment advice. Please consult your financial advisor before making any investments.
+                         </p>
                     </section>
                     
                     <ul class="container">
                          <li>
-                              <a href="#tomorrow">Future of Tomorrow Today</a>
+                              <a href="#editing">Perspective on Gene Editing</a>
                          </li>
                          <li>
-                              <a href="#editing">Perspective on Gene Editing</a>
+                              <a href="#tomorrow">Future of Tomorrow Today</a>
                          </li>
                     </ul>
 
@@ -207,8 +211,6 @@
                     <div class="container">
                          <a href="investing.html">Back to Investing</a>
                     </div>
-
-                    <p class="container">&#42; I am not a Financial Advisor. This is just My Perspetive. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
           </main>
 
