--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                
                <div class="front-page">
                     <div class="news-updates">
+                         <h3>Quck Links</h3>
                          <ul>
-                              <li>Quick Links:</li>
                               <li><a href="investing/portfolio.html">My Portfolio</a></li>
                               <li><a href="investing/topten.html">Top 10 Ideas</a></li>
                               <li><a href="companies/companies.html">Company Profiles</a></li>
@@ -95,10 +95,10 @@
                     </div> 
 
                     <div class="news-updates">
+                         <h3>Contributor Perspectives</h3>
                          <ul>
-                              <li>Perspectives:</li>
-                              <li><a href="investing/article.html#tomorrow">Future of Tomorrow Today</a></li>
                               <li><a href="investing/article.html#editing">Perspective on Gene Editing</a></li>
+                              <li><a href="investing/article.html#tomorrow">Future of Tomorrow Today</a></li>
                          </ul>
                     </div>
                </div>
@@ -107,7 +107,7 @@
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="news-title">Recent News</h2>
+                              <h3>Recent News</h3>
                               <p>
                                    <strong>3/3/2023: </strong> Moved the Cash I took from Merrill to Robinhood to find that account.
                                    As soon as we have a good biotech down day, I plan to start my core positions in each of the stocks
@@ -138,7 +138,7 @@
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="news-title">Website Updates</h2>
+                              <h3>Website Updates</h3>
                               <p> 
                                    <strong>3/3/2023: </strong> I continue to build out the Investing Section by adding a new menu 
                                    and new topics like a Perspective, Top 10 Ideas and Fintech section.
